JAS version JAS 2.7.70
- https://github.com/kredel/java-algebra-system/releases/tag/v2.7.70

--- a/symja_android_library/matheclipse-external/src/main/java/edu/jas/vector/package.html
+++ b/symja_android_library/matheclipse-external/src/main/java/edu/jas/vector/package.html
@@ -10,10 +10,11 @@
     <h1>Generic vector and matrix package.</h1>
 
 <p>
-  This package 
-  contains classes for vectors, matices and lists of polynomials 
-  and solvable polynomials,
-  e.g. <code>GenVector</code>, <code>GenMatrix</code> or <code>ModuleList</code>.
+  This package contains classes for generic vectors and matices over
+  <code>RingElem</code>s, namely <code>GenVector</code> and
+  <code>GenMatrix</code>.  Algorithms for vector and matrix
+  computation are contained in <code>BasicLinAlg</code> and matrix
+  decompositions in <code>LinAlg</code>.
 </p>
 
 
@@ -22,7 +23,7 @@
 <p>
 <!-- Created: Wed Mar  1 12:29:04 CET 2006 -->
 <!-- hhmts start -->
-Last modified: Mon Jul  9 23:04:48 CEST 2007
+Last modified: Thu Jul  8 17:24:45 CEST 2021
 <!-- hhmts end -->
 </p>
 <p>$Id$ 
