Replace old Gitter chat with Discord chat

--- a/symja_android_library/matheclipse-io/src/main/resources/public/index.html
+++ b/symja_android_library/matheclipse-io/src/main/resources/public/index.html
@@ -103,7 +103,7 @@
 <p>Enter queries and evaluate them by pressing <code>Shift</code> + <code>Return</code>.</p>
 <p>See the <a href="javascript:showGallery()">gallery</a> for some examples or the <a href="javascript:showDoc()">documentation</a> for a full list of supported functions.</p>
 <p>Symja uses <a href="http://www.mathjax.org/" target="_blank">MathJax</a> to display beautiful math.
-Please contact us on <a href="https://gitter.im/symja_android_library/Lobby" target="_blank">Gitter Chat</a>.</p>
+Please contact us on <a href="https://discord.gg/tYknzr2qam" target="_blank">Discord Chat</a>.</p>
 <div style="position:absolute;right:0;bottom:-2.8em;">
   <p style="text-align:right;color:#3f3f3f;"><label><input type="checkbox" id="hideStartupMsg" />Do not show on startup.</label></p>
 </div>
