Use Apfloat binomial()

--- a/symja_android_library/matheclipse-core/src/main/java/org/matheclipse/core/eval/util/package.html
+++ b/symja_android_library/matheclipse-core/src/main/java/org/matheclipse/core/eval/util/package.html
@@ -4,7 +4,7 @@
 
 </head>
 <body>
-<p>Utility implementations for assumptions, sequences, tabes, options and level specifications.
+<p>Utility implementations for assumptions, sequences, tables, options and level specifications.
 </p>
 </body>
 </html>
