clean up / JUnit tests

--- a/symja_android_library/matheclipse-core/src/main/java/org/matheclipse/core/eval/exception/package.html
+++ b/symja_android_library/matheclipse-core/src/main/java/org/matheclipse/core/eval/exception/package.html
@@ -4,7 +4,7 @@
 
 </head>
 <body>
-<p>Exceptions derived from <code>MathException</code> and <code>FlowControlException</code>
+<p>Exceptions thrown by the evaluation engine. Exceptions derived from <code>MathException</code> and <code>FlowControlException</code>
 </p>
 </body>
 </html>
